# pyclickimage

./: .buildinfo  .bumpver.toml  .gitignore  Makefile  README.md  api.html  clicks.csv  genindex.html  index.html  installation.html  objects.inv  pyclickimage_clicks_defaults.csv  pyproject.toml  requirements.txt  search.html  searchindex.js  usage.html
.doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
.doctrees/api_doc/: click_image_app.doctree  click_manager.doctree  image_viewer.doctree  run.doctree
.doctrees/usage_doc/: extracting_the_clicks.doctree  running_the_GUI.doctree  using_the_GUI.doctree
.github/workflows/: publish.yml  sphinx.yml
_modules/: index.html
_modules/pyclickimage/: click_image_app.html  click_manager.html  image_viewer.html  run.html
_sources/: index.rst.txt  usage.rst.txt
_sources/api_doc/: click_manager.rst.txt  image_viewer.rst.txt
_sources/usage_doc/: running_the_GUI.rst.txt  using_the_GUI.rst.txt
api_doc/: click_image_app.html  click_manager.html  image_viewer.html  run.html
docs/source/: api.rst  conf.py  index.rst  installation.rst
docs/source/api_doc/: click_image_app.rst  run.rst
docs/source/usage_doc/: extracting_the_clicks.rst  running_the_GUI.rst  using_the_GUI.rst
examples/: clicks.csv  example.py  output.csv
pyclickimage/: __init__.py  __main__.py  __version__.py  click_image_app.py  click_manager.py  extract_click.py  image_viewer.py  launch_app.py  run.py
usage_doc/: extracting_the_clicks.html  running_the_GUI.html  using_the_GUI.html
