[build-system]
requires = [
  "setuptools>=42",
  "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyclickimage"
requires-python = ">= 3.8"
dynamic = ["dependencies", "version"]
description = "UI to collect 2D-coordinates of points on an image"
license = {file = "LICENSE"}
authors = [
{name = "Artezaru", email = "artezaru.github@proton.me"}
]
classifiers = [
  "Programming Language :: Python"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyclickimage", "pyclickimage*"]
exclude = ["laboratory", "laboratory.*", "tests", "tests*", "examples", "examples*"]

[tool.setuptools.package-data]
"pyclickimage.resources" = ["*"]

[project.scripts]
pyclickimage = "pyclickimage.__main__:__main__"

[project.gui-scripts]
pyclickimage-gui = "pyclickimage.__main__:__main_gui__"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "pyclickimage.__version__.__version__"}

[project.optional-dependencies]
dev = [
    "sphinx",
    "pydata-sphinx-theme",
    "numpydoc",
    "pytest",
    "pyinstaller",
    "pytest-cov",
    "bumpver",
    "pyinstaller"
]